# pytorch-space

./: .mdformat.toml  .pre-commit-config.yaml  CHANGELOG.md  pyproject.toml  tasks.py
.github/workflows/: tests.yml
src/pyproject/: __init__.py
tests/src/pyproject/: test_pyproject.py
